fixed alignment issues

--- a/cogweb/src/Components/IB/IB.css
+++ b/cogweb/src/Components/IB/IB.css
@@ -1,28 +1,24 @@
 .IB{
+    position: relative;
    width:100%;
-   height: 100vh;
    background-color: black;
 }
-
-
 .vid {
     
     width: 100%;
-    height: 100%;
     object-fit: cover;
     opacity: 1;
     }
 .steam{
-        width: 75px;
+        width: 7vw;
     }
 
 .IB button{
-    display: inline-block;
     background-color: transparent;
     border-color: #F5F5F5;
     color:#F5F5F5;
     padding: 14px 25px;
-    font-size: 12px;
+    font-size: 1.5vw;
     border-radius: 30px;
     cursor: pointer;
     border: 0;    
@@ -44,4 +40,12 @@
 }
 .IB :hover .content{
     opacity: 1;
+}
+
+/* media query */
+
+@media (max-width: 800px){
+    /*.IB button{
+        font-size: 8px;
+    }*/
 }
