--- a/cogweb/src/Components/IB_desc/IB_desc.css
+++ b/cogweb/src/Components/IB_desc/IB_desc.css
@@ -5,8 +5,7 @@
 .desc{
     padding: 30px;
    font-style: italic;
-   width: 100%;
-   height: 100%;
+   width: 100%; 
    display: flex;
    flex-direction: column;
    justify-content: center;
@@ -15,7 +14,7 @@
 }
 .titlepic{
     
-    width: 100vh;
+    width: 70%;
 }
 .IB_desc button{
     display: inline-block;
