--- a/cogweb/src/Components/NavBar/NavBar.css
+++ b/cogweb/src/Components/NavBar/NavBar.css
@@ -1,6 +1,7 @@
 nav{
     width: 100%;
-    background: rgba(0, 0, 0, 0.95);
+    background: rgba(0,0,0,0.95);
+    background-blend-mode: overlay;
     color: #fff;
     padding: 0 0;
     position: fixed;
@@ -61,4 +62,54 @@ nav ul li{
 
   .btn-icon:hover{
       transform: scale(1.3);
+  }
+.menu-icon{
+    display: none;
+}
+  /* media query */
+  @media (max-width: 890px){
+      .btn{
+          padding: 14px 22px;
+      }
+      .logo{
+          width:140px;
+      }
+      nav ul li{
+        margin: 5px 15px;
+      }
+
+  }
+  @media (max-width: 800px){
+      nav{
+        background: rgba(0,0,0,0);
+      }
+      nav ul{
+          position: fixed;
+          top:0;
+          right:0;
+          bottom: 0;
+          background: rgba(0,0,0,0.95);
+          z-index: -1;
+          width: 200px;
+          padding-top: 70px;
+          transition: 0.5s;
+      }
+      nav ul li{
+          display: block;
+          margin: 25px 40px ;
+      }
+      .btn-icon{
+        transform: TranslateX(30px)
+      }
+      .title{
+        transform: TranslateX(-30px)
+      }
+      .menu-icon{
+          display: block;
+          width: 30px;
+          cursor: pointer;
+      }
+      .hide-mobile-menu{
+          right: -200px;
+      }
   }
